# c_spirit_Gemini_2_5_flash_functionalities_no_humans_2

./: .coverage  AIM2-ODIE-023-T1_COMPLETION_SUMMARY.md  OWLREADY2_INTEGRATION_SUMMARY.md  PROMPT_TEMPLATES_IMPLEMENTATION_SUMMARY.md  README.md  demo_aim2_odie_012_t3.py  demo_chunker.py  demo_prompt_utilities.py  demo_relationship_templates.py  plan_Gemini_2_5_flash_functionalities_no_humans_2.md  pyproject.toml  run_instructions.txt  test_comprehensive.txt  test_sample.txt  test_sample_cleaned.txt  tickets_Gemini_2_5_flash_functionalities_no_humans_2.md
docs/: INSTALL.md  checklist.md  few_shot_ner_implementation.md  integration_tests_implementation.md  new_checklist.md
examples/: few_shot_ner_demo.py  ner_demo_usage.py  owlready2_integration_demo.py  owlready2_real_world_example.py  prompt_template_usage.py  relationship_schema_demo.py  sample_entity_schema.json
logs/: claude_output_20250804_153645.json  claude_output_20250804_153840.json  claude_output_20250804_154111.json  claude_output_20250804_154316.json  claude_output_20250804_154757.json  claude_output_20250804_154937.json  claude_output_20250804_155303.json  claude_output_20250804_155629.json  claude_output_20250804_155919.json  claude_output_20250804_160135.json  claude_output_20250804_160756.json  claude_output_20250804_161057.json  claude_output_20250804_161838.json  claude_output_20250804_162039.json  claude_output_20250804_163442.json  claude_output_20250804_163943.json  claude_output_20250804_164204.json  claude_output_20250804_164354.json  claude_output_20250804_165031.json  claude_output_20250804_165748.json  claude_output_20250804_165943.json  claude_output_20250804_170339.json  claude_output_20250804_171041.json  claude_output_20250804_171727.json  claude_output_20250804_172038.json  claude_output_20250804_172409.json  claude_output_20250804_173201.json  claude_output_20250804_173457.json  claude_output_20250804_173823.json  claude_output_20250804_174009.json  claude_output_20250804_174144.json  claude_output_20250804_174555.json  claude_output_20250804_175332.json  claude_output_20250804_180924.json  claude_output_20250804_181245.json  claude_output_20250804_181526.json  claude_output_20250804_181812.json  claude_output_20250804_182328.json  claude_output_20250804_182629.json  claude_output_20250804_183356.json  (+119 more)
pubmed_data/: pubmed_metadata_20250805_100519_100_articles.txt  pubmed_metadata_20250805_101157_100_articles.txt  pubmed_metadata_20250805_101348_100_articles.txt  pubmed_metadata_20250805_101503_100_articles.txt  pubmed_metadata_20250805_101611_100_articles.txt  pubmed_metadata_20250805_111647_100_articles.txt  pubmed_results_20250805_100519_100_articles.xml  pubmed_results_20250805_111647_100_articles.xml
src/: .gitkeep  cli.py  temp_test_file.py
src/data_acquisition/: __init__.py  journal_scraper.py  pdf_extractor.py  pubmed.py
src/data_quality/: __init__.py  deduplicator.py  normalizer.py  taxonomy.py
src/evaluation/: __init__.py  benchmarker.py  curation_tool.py  gold_standard_tool.py
src/llm_extraction/: README.md  __init__.py  entity_schemas.py  ner.py  prompt_templates.py  relations.py  relationship_schemas.py
src/ontology/: __init__.py  editor.py  exporter.py  loader.py  reasoner.py  relationships.py  scheme_functional.py  scheme_source.py  scheme_structural.py  trimmer.py
src/ontology_mapping/: __init__.py  entity_mapper.py  relation_mapper.py
src/text_processing/: __init__.py  chunker.py  cleaner.py
src/utils/: __init__.py  testing_framework.py
test_output/: pubmed_metadata_20250805_100738_100_articles.txt
tests/: __init__.py  conftest.py  test_code_quality.py  test_dependencies.py
tests/cli/: __init__.py  test_corpus_cli.py  test_evaluation_cli.py  test_extraction_cli.py  test_ontology_cli.py  test_postprocessing_cli.py
tests/data_acquisition/: __init__.py  test_journal_scraper.py  test_pdf_extractor.py  test_pubmed.py
tests/data_quality/: __init__.py  test_deduplicator.py  test_normalizer.py  test_taxonomy.py
tests/evaluation/: __init__.py  test_benchmarker.py  test_curation_tool.py  test_gold_standard_tool.py
tests/llm_extraction/: __init__.py  test_few_shot_templates.py  test_ner.py  test_prompt_template_integration.py  test_prompt_template_utilities.py  test_prompt_templates.py  test_relations.py  test_relationship_schemas.py
tests/ontology/: __init__.py  test_editor.py  test_exporter.py  test_loader.py  test_reasoner.py  test_relationships.py  test_scheme_functional.py  test_scheme_source.py  test_scheme_structural.py  test_trimmer.py
tests/ontology_mapping/: __init__.py  test_entity_mapper.py  test_owlready2_integration.py  test_relation_mapper.py
tests/text_processing/: __init__.py  test_chunker.py  test_cleaner.py
