[project]
name = "c-spirit-gemini-functionalities"
version = "0.1.0"
description = "C-Spirit Gemini 2.5 Flash Functionalities - Ontology development and information extraction"
authors = [
    {name = "Research Team"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Ontology manipulation and knowledge representation
    "Owlready2>=0.48,<1.0",
    
    # Biological data processing
    "biopython>=1.84,<2.0",
    
    # PDF text extraction
    "PyMuPDF>=1.26.0,<2.0",
    
    # Text-to-ontology mapping
    "text2term>=1.3.0,<2.0",
    
    # LLM-based information extraction
    "llm-ie>=0.1.0,<1.0",
    
    # Ontology-guided generation with LLMs
    "ontogpt>=0.2.6,<1.0",
    
    # Fuzzy string matching
    "fuzzywuzzy>=0.18.0,<1.0",
    "python-Levenshtein>=0.12.0,<1.0",  # Performance optimization for fuzzywuzzy
    
    # Data deduplication
    "dedupe>=3.0.0,<4.0",
    
    # Taxonomic data management
    "multitax>=1.2.0,<2.0",
    
    # NCBI taxonomy access
    "ncbi-taxonomist>=1.2.0,<2.0"
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.0.0,<7.0",  # Test coverage reporting
    "pytest-mock>=3.12.0,<4.0",  # Mock objects for testing
    
    # Code quality and linting
    "ruff>=0.6.0,<1.0",  # Fast Python linter and formatter
    "black>=24.0.0",  # Code formatting
    
    # Development utilities
    "pre-commit>=3.6.0,<4.0",  # Git hooks for code quality
    "mypy>=1.8.0,<2.0",  # Static type checking
    "freezegun>=1.4.0,<2.0",  # Time-based testing utilities
    "tox>=4.11.0,<5.0",  # Testing across multiple Python versions
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
